{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 103,
  "lineage": "1076bab0-0090-682c-5c6e-51ab3b05c379",
  "resources": [
    {
      "module": "module.VirtualMachines",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "networkinterface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "images-interface-01",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/networkInterfaces/images-interface-01",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app01-network/subnets/imagessubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "uksouth",
            "mac_address": "60-45-BD-F2-1B-0E",
            "name": "images-interface-01",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "app-grp",
            "virtual_machine_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Compute/virtualMachines/imagesvm01"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "videos-interface-01",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/networkInterfaces/videos-interface-01",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app01-network/subnets/videossubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "uksouth",
            "mac_address": "00-22-48-40-88-7A",
            "name": "videos-interface-01",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "app-grp",
            "virtual_machine_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Compute/virtualMachines/videosvm01"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.applicationgateway",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "networkinterface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "images-interface-01",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/networkInterfaces/images-interface-01",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app01-network/subnets/imagessubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "uksouth",
            "mac_address": "60-45-BD-F2-1B-0E",
            "name": "images-interface-01",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "app-grp",
            "virtual_machine_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Compute/virtualMachines/imagesvm01"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "videos-interface-01",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/networkInterfaces/videos-interface-01",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app01-network/subnets/videossubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "uksouth",
            "mac_address": "00-22-48-40-88-7A",
            "name": "videos-interface-01",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "app-grp",
            "virtual_machine_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Compute/virtualMachines/videosvm01"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.applicationgateway",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "appgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/appgateway/backendAddressPools/images-pool",
                "ip_addresses": [
                  "10.0.0.4"
                ],
                "name": "images-pool"
              },
              {
                "fqdns": [],
                "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/appgateway/backendAddressPools/videos-pool",
                "ip_addresses": [
                  "10.0.1.4"
                ],
                "name": "videos-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/appgateway/backendHttpSettingsCollection/backend-http-settings",
                "name": "backend-http-settings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/appgateway/frontendIPConfigurations/frontend-ip-config",
                "name": "frontend-ip-config",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/publicIPAddresses/gateway-ip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/appgateway/frontendPorts/frontend-port",
                "name": "frontend-port",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/appgateway/gatewayIPConfigurations/gateway-ip-configuration",
                "name": "gateway-ip-configuration",
                "subnet_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app01-network/subnets/app-gatewaysubnet"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/appgateway/frontendIPConfigurations/frontend-ip-config",
                "frontend_ip_configuration_name": "frontend-ip-config",
                "frontend_port_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/appgateway/frontendPorts/frontend-port",
                "frontend_port_name": "frontend-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/appgateway/httpListeners/gateway-listener",
                "name": "gateway-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/appgateway",
            "identity": [],
            "location": "uksouth",
            "name": "appgateway",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "",
                "backend_address_pool_name": "",
                "backend_http_settings_id": "",
                "backend_http_settings_name": "",
                "http_listener_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/appgateway/httpListeners/gateway-listener",
                "http_listener_name": "gateway-listener",
                "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/appgateway/requestRoutingRules/RoutingRuleA",
                "name": "RoutingRuleA",
                "priority": 100,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "PathBasedRouting",
                "url_path_map_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/appgateway/urlPathMaps/RoutingPath",
                "url_path_map_name": "RoutingPath"
              }
            ],
            "resource_group_name": "app-grp",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": null,
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [
              {
                "default_backend_address_pool_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/appgateway/backendAddressPools/images-pool",
                "default_backend_address_pool_name": "images-pool",
                "default_backend_http_settings_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/appgateway/backendHttpSettingsCollection/backend-http-settings",
                "default_backend_http_settings_name": "backend-http-settings",
                "default_redirect_configuration_id": "",
                "default_redirect_configuration_name": "",
                "default_rewrite_rule_set_id": "",
                "default_rewrite_rule_set_name": "",
                "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/appgateway/urlPathMaps/RoutingPath",
                "name": "RoutingPath",
                "path_rule": [
                  {
                    "backend_address_pool_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/appgateway/backendAddressPools/images-pool",
                    "backend_address_pool_name": "images-pool",
                    "backend_http_settings_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/appgateway/backendHttpSettingsCollection/backend-http-settings",
                    "backend_http_settings_name": "backend-http-settings",
                    "firewall_policy_id": "",
                    "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/appgateway/urlPathMaps/RoutingPath/pathRules/imagesRoutingPath",
                    "name": "imagesRoutingPath",
                    "paths": [
                      "/images/*"
                    ],
                    "redirect_configuration_id": "",
                    "redirect_configuration_name": "",
                    "rewrite_rule_set_id": "",
                    "rewrite_rule_set_name": ""
                  },
                  {
                    "backend_address_pool_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/appgateway/backendAddressPools/videos-pool",
                    "backend_address_pool_name": "videos-pool",
                    "backend_http_settings_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/appgateway/backendHttpSettingsCollection/backend-http-settings",
                    "backend_http_settings_name": "backend-http-settings",
                    "firewall_policy_id": "",
                    "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/appgateway/urlPathMaps/RoutingPath/pathRules/videosRoutingPath",
                    "name": "videosRoutingPath",
                    "paths": [
                      "/videos/*"
                    ],
                    "redirect_configuration_id": "",
                    "redirect_configuration_name": "",
                    "rewrite_rule_set_id": "",
                    "rewrite_rule_set_name": ""
                  }
                ]
              }
            ],
            "waf_configuration": [],
            "zones": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.StorageAccount.azurerm_storage_account.storage_account",
            "module.StorageAccount.azurerm_storage_blob.blobs",
            "module.StorageAccount.azurerm_storage_container.container",
            "module.StorageAccount.random_integer.storage_account_suffix",
            "module.VirtualMachines.azurerm_linux_virtual_machine.virtualmachines",
            "module.VirtualMachines.azurerm_virtual_machine_extension.vmextension",
            "module.VirtualMachines.data.azurerm_network_interface.networkinterface",
            "module.applicationgateway.azurerm_public_ip.gateway_ip",
            "module.applicationgateway.azurerm_subnet.appgatewaysubnet",
            "module.applicationgateway.data.azurerm_network_interface.networkinterface",
            "module.network.azurerm_network_interface.network_interfaces",
            "module.network.azurerm_network_security_group.network_security_group",
            "module.network.azurerm_subnet.network_subnets",
            "module.network.azurerm_subnet_network_security_group_association.subnet_nsg",
            "module.network.azurerm_virtual_network.virtual_network",
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "module": "module.applicationgateway",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "gateway_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/publicIPAddresses/gateway-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.140.104.43",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "gateway-ip",
            "resource_group_name": "app-grp",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.StorageAccount.azurerm_storage_account.storage_account",
            "module.StorageAccount.azurerm_storage_blob.blobs",
            "module.StorageAccount.azurerm_storage_container.container",
            "module.StorageAccount.random_integer.storage_account_suffix",
            "module.VirtualMachines.azurerm_linux_virtual_machine.virtualmachines",
            "module.VirtualMachines.azurerm_virtual_machine_extension.vmextension",
            "module.VirtualMachines.data.azurerm_network_interface.networkinterface",
            "module.network.azurerm_network_interface.network_interfaces",
            "module.network.azurerm_network_security_group.network_security_group",
            "module.network.azurerm_subnet.network_subnets",
            "module.network.azurerm_subnet_network_security_group_association.subnet_nsg",
            "module.network.azurerm_virtual_network.virtual_network",
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "module": "module.applicationgateway",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appgatewaysubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.10.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app01-network/subnets/app-gatewaysubnet",
            "name": "app-gatewaysubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "app-grp",
            "virtual_network_name": "app01-network"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.StorageAccount.azurerm_storage_account.storage_account",
            "module.StorageAccount.azurerm_storage_blob.blobs",
            "module.StorageAccount.azurerm_storage_container.container",
            "module.StorageAccount.random_integer.storage_account_suffix",
            "module.VirtualMachines.azurerm_linux_virtual_machine.virtualmachines",
            "module.VirtualMachines.azurerm_virtual_machine_extension.vmextension",
            "module.VirtualMachines.data.azurerm_network_interface.networkinterface",
            "module.network.azurerm_network_interface.network_interfaces",
            "module.network.azurerm_network_security_group.network_security_group",
            "module.network.azurerm_subnet.network_subnets",
            "module.network.azurerm_subnet_network_security_group_association.subnet_nsg",
            "module.network.azurerm_virtual_network.virtual_network",
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "network_interfaces",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "images-interface-01",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/networkInterfaces/images-interface-01",
            "internal_domain_name_suffix": "uipyatgct2junaj43hhzxauwbg.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app01-network/subnets/imagessubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "uksouth",
            "mac_address": "60-45-BD-F2-1B-0E",
            "name": "images-interface-01",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "app-grp",
            "virtual_machine_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Compute/virtualMachines/imagesvm01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_subnet.network_subnets",
            "module.network.azurerm_virtual_network.virtual_network",
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        },
        {
          "index_key": "videos-interface-01",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/networkInterfaces/videos-interface-01",
            "internal_domain_name_suffix": "uipyatgct2junaj43hhzxauwbg.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app01-network/subnets/videossubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "uksouth",
            "mac_address": "00-22-48-40-88-7A",
            "name": "videos-interface-01",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "app-grp",
            "virtual_machine_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Compute/virtualMachines/videosvm01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_subnet.network_subnets",
            "module.network.azurerm_virtual_network.virtual_network",
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "network_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "images",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/imagesnetwork-nsg",
            "location": "uksouth",
            "name": "imagesnetwork-nsg",
            "resource_group_name": "app-grp",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-22",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-80",
                "priority": 310,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        },
        {
          "index_key": "videos",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/videosnetwork-nsg",
            "location": "uksouth",
            "name": "videosnetwork-nsg",
            "resource_group_name": "app-grp",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-22",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-80",
                "priority": 310,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "network_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "images",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app01-network/subnets/imagessubnet",
            "name": "imagessubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "app-grp",
            "virtual_network_name": "app01-network"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_virtual_network.virtual_network",
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        },
        {
          "index_key": "videos",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app01-network/subnets/videossubnet",
            "name": "videossubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "app-grp",
            "virtual_network_name": "app01-network"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_virtual_network.virtual_network",
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "images",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app01-network/subnets/imagessubnet",
            "network_security_group_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/imagesnetwork-nsg",
            "subnet_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app01-network/subnets/imagessubnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_network_security_group.network_security_group",
            "module.network.azurerm_subnet.network_subnets",
            "module.network.azurerm_virtual_network.virtual_network",
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        },
        {
          "index_key": "videos",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app01-network/subnets/videossubnet",
            "network_security_group_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/videosnetwork-nsg",
            "subnet_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app01-network/subnets/videossubnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_network_security_group.network_security_group",
            "module.network.azurerm_subnet.network_subnets",
            "module.network.azurerm_virtual_network.virtual_network",
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "virtual_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "app01-network",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4c801fa2-9fc2-4613-813e-e9cf9b82960e",
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app01-network",
            "location": "uksouth",
            "name": "app01-network",
            "resource_group_name": "app-grp",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app01-network/subnets/imagessubnet",
                "name": "imagessubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/imagesnetwork-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app01-network/subnets/videossubnet",
                "name": "videossubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/videosnetwork-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.10.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app01-network/subnets/app-gatewaysubnet",
                "name": "app-gatewaysubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        }
      ]
    }
  ]
}